<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/product_image_text"
        style="@style/TextPrimaryBoldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_image"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <ImageView
        android:id="@+id/product_image"
        style="@style/ImageStyle"
        android:layout_width="@dimen/product_image_preview_width"
        android:layout_height="@dimen/product_image_preview_height"
        android:background="@drawable/border_image"
        android:src="@drawable/ic_add_circle_outline"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name_text"
        style="@style/TextPrimaryBoldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        app:layout_constraintBottom_toBottomOf="@id/product_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_name" />

    <EditText
        android:id="@+id/product_name"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border_line"
        android:hint="@string/product_name_hint"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_name_text"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/product_price_text"
        style="@style/TextPrimaryBoldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        app:layout_constraintBottom_toBottomOf="@id/product_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_price" />

    <EditText
        android:id="@+id/product_price"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border_line"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_price_text"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/product_quantity_text"
        style="@style/TextPrimaryBoldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_quantity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_add_quantity"
        app:layout_constraintBottom_toBottomOf="@id/product_add_quantity"/>

    <ImageView
        style="@style/ImageButtonStile"
        android:id="@+id/product_add_quantity"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:src="@drawable/ic_action_add"
        app:layout_constraintTop_toTopOf="@id/product_quantity"
        app:layout_constraintBottom_toBottomOf="@id/product_quantity"
        app:layout_constraintStart_toEndOf="@id/product_quantity_text"/>

    <TextView
        android:id="@+id/product_quantity"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border_line"
        android:text="@string/product_quantity_text"
        app:layout_constraintTop_toTopOf="@id/product_remove_quantity"
        app:layout_constraintBottom_toBottomOf="@id/product_remove_quantity"
        app:layout_constraintStart_toEndOf="@id/product_add_quantity"
        app:layout_constraintEnd_toStartOf="@id/product_remove_quantity"/>

    <ImageView
        style="@style/ImageButtonStile"
        android:id="@+id/product_remove_quantity"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:src="@drawable/ic_action_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintStart_toEndOf="@+id/product_quantity"/>

    <TextView
        android:id="@+id/product_supplier_name_text"
        style="@style/TextPrimaryBoldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/supplier_name"
        app:layout_constraintBottom_toBottomOf="@id/product_supplier_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_supplier_name" />

    <EditText
        android:id="@+id/product_supplier_name"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border_line"
        android:hint="@string/product_supplier_name_hint"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_supplier_name_text"
        app:layout_constraintTop_toBottomOf="@id/product_remove_quantity"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/product_supplier_phone_number_text"
        style="@style/TextPrimaryBoldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/supplier_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/product_supplier_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_supplier_phone_number" />

    <EditText
        android:id="@+id/product_supplier_phone_number"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border_line"
        android:hint="@string/product_supplier_phone_number_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_supplier_phone_number_text"
        app:layout_constraintTop_toBottomOf="@id/product_supplier_name"
        tools:text="@tools:sample/us_phones" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/floating_button_margin"
        android:src="@drawable/ic_stat_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>