<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:expanded="false">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/avatars" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/product_name_text"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                app:layout_constraintBottom_toBottomOf="@id/product_edit_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/product_edit_name" />

            <EditText
                android:id="@+id/product_edit_name"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_line"
                android:hint="@string/product_name_hint"
                android:inputType="textCapSentences|textAutoCorrect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_name_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/product_price_text"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                app:layout_constraintBottom_toBottomOf="@id/product_edit_price"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/product_edit_price" />

            <EditText
                android:id="@+id/product_edit_price"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_line"
                android:hint="@string/product_price_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_price_text"
                app:layout_constraintTop_toBottomOf="@id/product_edit_name"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/product_quantity_text"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                app:layout_constraintBottom_toBottomOf="@id/product_edit_quantity"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/product_edit_quantity" />

            <EditText
                android:id="@+id/product_edit_quantity"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_line"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_quantity_text"
                app:layout_constraintTop_toBottomOf="@id/product_edit_price"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/product_supplier_name_text"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name"
                app:layout_constraintBottom_toBottomOf="@id/product_edit_supplier_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/product_edit_supplier_name" />

            <EditText
                android:id="@+id/product_edit_supplier_name"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_line"
                android:hint="@string/product_supplier_name_hint"
                android:inputType="textCapSentences|textAutoCorrect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_supplier_name_text"
                app:layout_constraintTop_toBottomOf="@id/product_edit_quantity"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/product_supplier_phone_number_text"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phone_number"
                app:layout_constraintBottom_toBottomOf="@id/product_edit_supplier_phone_number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/product_edit_supplier_phone_number" />

            <EditText
                android:id="@+id/product_edit_supplier_phone_number"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_line"
                android:hint="@string/product_supplier_phone_number_hint"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_supplier_phone_number_text"
                app:layout_constraintTop_toBottomOf="@id/product_edit_supplier_name"
                tools:text="@tools:sample/us_phones" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>